# linkml-datalog

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yaml
annotations/: index.html
basics/: index.html
docs/: annotations.md  basics.md  index.md  install.md  motivation.md  schema-rules.md  translations.md  usage.md
install/: index.html
linkml_datalog/: engine.py
linkml_datalog/dumpers/: jsonfactsdumper.py  tupledumper.py
linkml_datalog/engines/: datalog_engine.py  jsonlog_engine.py
linkml_datalog/generators/: dataloggen.py
linkml_datalog/lp/: jsonlog.py  linkmllog.py
linkml_datalog/model/: validation.py
linkml_datalog/pydanticlog/: README.md  __init__.py  pydanticlog.py
linkml_datalog/utils/: json_to_eav.py
motivation/: index.html
schema-rules/: index.html
search/: search_index.json
tests/: test_biolink.py  test_dataloggen.py  test_engine.py  test_jsonlog.py  test_linkmllog.py  test_snakelog.py  test_tupledumper.py
tests/inputs/: biolink-model.yaml  employee.yaml  example_personinfo_data.yaml  ext.yaml  instance_tests.trig  interval.yaml  personinfo.yaml
tests/models/: personinfo.py
translations/: index.html
usage/: index.html
