[tool.poetry]
version = "0.0.0"
name = "linkml_datalog"
description = "Datalog inference over LinkML schemas and data"
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linkml-dl = "linkml_datalog.engines.datalog_engine:cli"
