[tool.poetry]
name = "linkml_datalog"
version = "0.0.0"
description = "Datalog inference over LinkML schemas and data"
authors = ["cmungall <cjm@berkeleybop.org>"]

readme = "README.md"

homepage = "https://github.com/linkml/linkml-datalog"
repository = "https://github.com/linkml/linkml-datalog"
documentation = "https://github.com/linkml/linkml-datalog"

keywords = ["linkml", "reasoing", "datalog"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linkml-dl = "linkml_datalog.engines.datalog_engine:cli"
